--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/react": "^0.14.34",
     "@types/react-dom": "^0.14.16",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.10.0",
