--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@types/react": "^0.14.34",
     "@types/react-dom": "^0.14.16",
+    "@types/react-redux": "^4.4.31",
+    "@types/redux": "^3.5.29",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -27,6 +29,7 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "tslint": "^3.15.1",
-    "tslint-loader": "^2.1.5"
+    "tslint-loader": "^2.1.5",
+    "react-redux": "^4.4.5"
   }
 }
