--- a/client/package.json
+++ b/client/package.json
@@ -10,26 +10,36 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/es6-promise": "0.0.32",
+    "@types/isomorphic-fetch": "0.0.31",
     "@types/react": "^0.14.34",
     "@types/react-dom": "^0.14.16",
     "@types/react-redux": "^4.4.31",
-    "@types/redux": "^3.5.29",
+    "@types/react-router": "^2.0.36",
+    "@types/redux": "^3.5.30",
+    "@types/whatwg-fetch": "0.0.31",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "imports-loader": "^0.6.5",
     "node-sass": "^3.10.0",
     "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "typescript": "^2.0.2",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "whatwg-fetch": "^1.0.0"
   },
   "dependencies": {
+    "es6-promise": "^4.0.3",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "redux": "^3.6.0",
     "tslint": "^3.15.1",
-    "tslint-loader": "^2.1.5",
-    "react-redux": "^4.4.5"
+    "tslint-loader": "^2.1.5"
   }
 }
