--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,7 +9,9 @@
         "noUnusedParameters": true,
         "strictNullChecks": true,
         "sourceMap": true,
-        "jsx": "react"
+        "jsx": "react",
+        "lib": ["dom", "es6", "es2015.promise"],
+        "types": ["whatwg-fetch"]
     },
     "include": [
         "src/**/*.{tsx,ts}"
