--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react-router": "^2.0.36",
     "@types/redux": "^3.5.30",
     "@types/whatwg-fetch": "0.0.31",
+    "@types/material-ui": "^0.15.36",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
@@ -33,11 +34,14 @@
     "whatwg-fetch": "^1.0.0"
   },
   "dependencies": {
+    "@types/react-tap-event-plugin": "0.0.30",
     "es6-promise": "^4.0.3",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "material-ui": "next",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5"
