Rubocop ignore db schema

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - 'client/**/*'
     - 'tmp/**/*'
     - 'vendor/**/*'
+    - 'db/schema.rb'
   TargetRubyVersion: 2.2
 
 Metrics/LineLength:
