Endpoint for login and a test endpoint for the token generated (#37)
* Endpoint for login and a test endpoint for the token generated

* Rubocop ignore db schema

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,7 +6,11 @@ AllCops:
     - 'client/**/*'
     - 'tmp/**/*'
     - 'vendor/**/*'
+    - 'db/schema.rb'
   TargetRubyVersion: 2.2
 
 Metrics/LineLength:
+  Enabled: false
+
+Style/Documentation:
   Enabled: false
