--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@types/react-tap-event-plugin": "0.0.30",
+    "@types/redux-thunk": "^2.1.31",
     "es6-promise": "^4.0.3",
     "material-ui": "next",
     "react": "^15.3.2",
@@ -43,6 +44,7 @@
     "react-router": "^2.8.1",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5"
   }
