--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@
 
 AllCops:
   Exclude:
+    - 'bin/**/*'
     - 'client/**/*'
     - 'tmp/**/*'
     - 'vendor/**/*'
@@ -10,7 +11,13 @@ AllCops:
   TargetRubyVersion: 2.2
 
 Metrics/LineLength:
-  Enabled: false
+  Max: 100
+
+Metrics/AbcSize:
+  Max: 25
+
+Metrics/MethodLength:
+  Max: 20
 
 Style/Documentation:
   Enabled: false
