--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "vocab",
   "version": "0.1.0",
   "description": "",
+  "private": true,
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
@@ -34,6 +35,7 @@
     "whatwg-fetch": "^1.0.0"
   },
   "dependencies": {
+    "@types/history": "^2.0.39",
     "@types/react-tap-event-plugin": "0.0.30",
     "@types/redux-thunk": "^2.1.31",
     "es6-promise": "^4.0.3",
