Implement react-router-redux

--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,14 @@
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
     "@types/isomorphic-fetch": "0.0.31",
+    "@types/material-ui": "^0.15.36",
     "@types/react": "^0.14.34",
     "@types/react-dom": "^0.14.16",
     "@types/react-redux": "^4.4.31",
     "@types/react-router": "^2.0.36",
+    "@types/react-router-redux": "^4.0.34",
     "@types/redux": "^3.5.30",
     "@types/whatwg-fetch": "0.0.31",
-    "@types/material-ui": "^0.15.36",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
@@ -44,6 +45,7 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
