--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,10 +17,10 @@ Metrics/AbcSize:
   Max: 25
 
 Metrics/MethodLength:
-  Max: 25
+  Max: 30
 
 Style/Documentation:
   Enabled: false
 
 Style/NumericLiterals:
-  MinDigits: 7
+  Enabled: false
