Add part of speech to wordinfo

--- a/test/fixtures/wordinfos.yml
+++ b/test/fixtures/wordinfos.yml
@@ -1,11 +1,13 @@
 probably:
   word: probably
   definition: ''
+  part_of_speech: ''
   lesson: english101
   user: testuser
 
 probable:
   word: probable
   definition: ''
+  part_of_speech: ''
   lesson: english101
   user: testuser
