Add app to heroku run rake db:migrate in circleci

--- a/circle.yml
+++ b/circle.yml
@@ -22,4 +22,4 @@ deployment:
       - git add --force client/dist/
       - git commit --amend -m "Auto Commit $CIRCLE_SHA1"
       - git push -f git@heroku.com:vocab-v2.git HEAD:refs/heads/master
-      - heroku run rake db:migrate
+      - heroku run rake db:migrate --app vocab-v2
