--- a/client/package.json
+++ b/client/package.json
@@ -40,9 +40,9 @@
     "@types/react-tap-event-plugin": "0.0.30",
     "@types/redux-thunk": "^2.1.31",
     "es6-promise": "^4.0.3",
-    "material-ui": "next",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "material-ui": "0.16.2",
+    "react": "15.3.2",
+    "react-dom": "15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
