Downgrade @types/react to 15.0.4 to fix build

--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@types/es6-promise": "0.0.32",
     "@types/isomorphic-fetch": "0.0.31",
     "@types/material-ui": "^0.16.7",
-    "@types/react": "^15.0.5",
+    "@types/react": "15.0.4",
     "@types/react-dom": "^0.14.22",
     "@types/react-redux": "^4.4.31",
     "@types/react-router": "^2.0.38",
