Lock down the version for react-router-redux

--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,8 @@
     "@types/react": "15.0.4",
     "@types/react-dom": "^0.14.22",
     "@types/react-redux": "^4.4.31",
-    "@types/react-router": "^2.0.38",
-    "@types/react-router-redux": "^4.0.34",
+    "@types/react-router": "^2.0.47",
+    "@types/react-router-redux": "4.0.35",
     "@types/redux": "^3.5.30",
     "@types/whatwg-fetch": "0.0.31",
     "copy-webpack-plugin": "^3.0.1",
