--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,10 +14,13 @@ Metrics/LineLength:
   Max: 100
 
 Metrics/AbcSize:
-  Max: 25
+  Max: 35
 
 Metrics/MethodLength:
-  Max: 30
+  Max: 35
+
+Metrics/CyclomaticComplexity:
+  Max: 8
 
 Metrics/ClassLength:
   Enabled: false
