--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
-    "typescript": "^2.1.1",
+    "typescript": "2.2.2",
     "webpack": "^1.13.2",
     "webpack-fail-plugin": "^1.0.5",
     "whatwg-fetch": "^1.0.0"
