--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,6 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "tslint": "^3.15.1",
-    "tslint-loader": "^2.1.5",
+    "tslint-loader": "^2.1.5"
   }
 }
